[project]
name = "tightwrap"
description = "A typed `functools.wraps`."
authors = [
    {name = "Tin Tvrtković", email = "tinchester@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache2"}
dynamic = ["version"]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.pdm]
package-type = "library"


[tool.pdm.dev-dependencies]
lint = [
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]
test = [
    "pytest>=7.4.4",
    "coverage>=7.4.0",
    "pytest-mypy-plugins>=3.0.0",
]


[tool.coverage.run]
parallel = true
source_pkgs = ["tightwrap"]


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }