[project]
name = "tightwrap"
description = "A typed `functools.wraps`."
authors = [
    {name = "Tin Tvrtković", email = "tinchester@gmail.com"},
]
dependencies = [
    "typing_extensions>=4.0.0; python_version<='3.10'"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache2"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.coverage.run]
parallel = true
source_pkgs = ["tightwrap"]
omit = ["_backported.py"]


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }


[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
lint = [
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]
test = [
    "pytest>=7.4.4",
    "coverage>=7.4.0",
    "pytest-mypy-plugins>=3.0.0",
]