[project]
name = "tightwrap"
description = "A typed `functools.wraps`."
authors = [
    {name = "Tin Tvrtković", email = "tinchester@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Apache2"}
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"


[tool.coverage.run]
parallel = true
source_pkgs = ["tightwrap"]
omit = ["_backported.py"]


[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }


[dependency-groups]
lint = [
    "mypy>=1.8.0",
    "ruff>=0.1.11",
]
test = [
    "pytest>=7.4.4",
    "coverage>=7.4.0",
    "pytest-typing",
    "ty>=0.0.21",
]

[tool.pytest]
typing_checkers = ["ty", "mypy"]
